fixing alignment of social links

--- a/production/css/bootstrap-simple.css
+++ b/production/css/bootstrap-simple.css
@@ -264,3 +264,10 @@ audio {
   font-weight: 100;
 }
 
+.section-wrapper {
+ display: inline-block; 
+}
+
+.centered-content {
+  text-align: center;
+}
